Fix top padding spacing in login/sign up forms

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@
   font-family: "Lora", sans-serif;
   background-color: #fff5ee;
   min-height: 100vh;
-  padding-top: 75px;
+  padding-top: 65px;
   padding-bottom: 55px;
 }
 
